--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "app/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -I --watch app"
+    "start": "nodemon -I --watch app",
+    "server": "json-server --watch db.json"
   },
   "keywords": [
     "nodejs"
@@ -20,7 +21,12 @@
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo": "^0.37.0",
+    "json-server": "^0.16.3",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "express": "^4.17.1"
   }
 }
